# fasttower

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: email.md  getting-started.md  index.md
docs/quick/: app-setup.md  index.md  overview.md  project-setup.md
docs/usage/: install.md
examples/maximun_example/: manage.py  pyproject.toml
examples/maximun_example/appexample/: config.py  models.py  routers.py  views.py
examples/maximun_example/example/: asgi.py  routers.py  settings.py
examples/start/: pyproject.toml
examples/start/appexample/: admin.py  commands.py  models.py  routers.py  serializers.py  views.py
examples/start/example/: asgi.py  routers.py  settings.py
fasttower/: __init__.py  cli.py  exceptions.py  server.py
fasttower/admin/: __init__.py  site.py
fasttower/admin/templates/: base.html  dashboard.html  layout.html
fasttower/apps/: config.py
fasttower/apps/taerich/: config.py
fasttower/auth/: base_user.py  config.py  hashers.py  models.py  providers.py
fasttower/blueprints/: commands.py
fasttower/blueprints/templates/app/: admin.py.jinja  config.py.jinja  models.py.jinja  routers.py.jinja  serializer.py.jinja  views.py.jinja
fasttower/blueprints/templates/project/: manage.py.jinja
fasttower/blueprints/templates/project/project_name/: asgi.py.jinja  routers.py.jinja  settings.py.jinja
fasttower/cache/: __init__.py  backends.py  lifespan.py
fasttower/conf/: __init__.py  global_settings.py
fasttower/db/: __init__.py  commands.py  lifespan.py
fasttower/db/models/: __init__.py
fasttower/email/: __init__.py  backends.py
fasttower/generics/: __init__.py
fasttower/mixins/: __init__.py
fasttower/routers/: __init__.py
fasttower/serializers/: __init__.py
fasttower/utils/: __init__.py
getting-started/: index.html
installation/: index.html
quick/: index.html
quick/app-setup/: index.html
quick/overview/: index.html
quick/project-setup/: index.html
search/: search_index.json
usage/admin-panel/: index.html
usage/cache/: index.html
usage/commands/: index.html
usage/email/: index.html
usage/install/: index.html
usage/model/: index.html
usage/routers/: index.html
