[tool.poetry]
name = "fasttower-tests"
version = "0.1.0"
description = ""
authors = ["sasha <sasha.2000ibr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fasttower = {git = "https://github.com/pysashapy/fasttower.git", extras = ["tortoise"]}
pydantic = {extras = ["email"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
